--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
+    --success: 88 77% 78%;
+    --success-foreground: 240 10% 3.9%;
+
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
